--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver class here"
+    "# Define Driver class here\n",
+    "class Driver():\n",
+    "    \n",
+    "    def greeting(self):\n",
+    "        return \"Hey, how are you?\"\n",
+    "    \n",
+    "    def ask_for_destination(self):\n",
+    "        return \"Where would you like to go today?\""
    ]
   },
   {
@@ -64,7 +71,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger class here "
+    "# Define Passenger class here \n",
+    "class Passenger():\n",
+    "    \n",
+    "    def reply_greeting(self):\n",
+    "        return \"I am doing well! Thanks for picking me up today!\"\n",
+    "    \n",
+    "    def in_a_hurry(self):\n",
+    "        return \"Punch it! They're on our tail!\""
    ]
   },
   {
