--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "polite_greeting = None\n",
+    "polite_greeting = daniel.greeting()\n",
     "print(polite_greeting)"
    ]
   },
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_time_to_talk = None\n",
+    "no_time_to_talk = niky.in_a_hurry()\n",
     "print(no_time_to_talk)"
    ]
   },
