--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Lion class"
+    "# create Lion class\n",
+    "class Lion():\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        return \"Roar!\""
    ]
   },
   {
@@ -156,7 +160,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Tiger class"
+    "# create Tiger class\n",
+    "class Tiger():\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        return \"Meow"
    ]
   },
   {
@@ -165,7 +173,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create Elephant class"
+    "# create Elephant class\n",
+    "class Elephant():\n",
+    "    \n",
+    "    def speak(self):\n",
+    "        return \"aldkfdasflkjerlakdnfe!\""
    ]
   },
   {
