automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,9 +193,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simba = None\n",
-    "tony = None\n",
-    "dumbo = None"
+    "simba = Lion()\n",
+    "tony = Tiger()\n",
+    "dumbo = Elephant()"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoo = None"
+    "zoo = [simba, tony, dumbo]"
    ]
   },
   {
